<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".create_fragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/find_entry_by_nrp"
        android:textSize="25sp"
        android:layout_marginVertical="20dp"
        android:textStyle="bold"
        android:textColor="@color/pink"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="50dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/nrp_label_read"
            android:labelFor="@+id/nrp_edit_read"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/purple"
            android:text="@string/nrp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:minHeight="48dp"
            android:id="@+id/nrp_edit_read"
            android:inputType="number"
            android:padding="10dp"
            android:background="@drawable/custom_edit_text"
            android:importantForAutofill="no" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:id="@+id/read_btn"
        android:text="@string/find"
        android:textColor="@color/white"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/pink"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/result"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/entry_not_found"
            android:textSize="20sp"
            android:text="@string/entry_not_found"
            android:textStyle="italic"
            android:visibility="gone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/result_nrp"
            android:textSize="20sp"
            android:visibility="visible"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/result_name"
            android:textSize="20sp"
            android:visibility="visible"/>

    </LinearLayout>


</LinearLayout>