<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".create_fragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_new_entry"
        android:textSize="25sp"
        android:layout_marginVertical="20dp"
        android:textStyle="bold"
        android:textColor="@color/pink"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="50dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/nrp_label_create"
            android:labelFor="@+id/nrp_edit_create"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/purple"
            android:text="@string/nrp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:minHeight="48dp"
            android:id="@+id/nrp_edit_create"
            android:inputType="number"
            android:padding="10dp"
            android:background="@drawable/custom_edit_text"
            android:importantForAutofill="no" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/nama_label_create"
            android:labelFor="@+id/nama_edit_create"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/purple"
            android:text="@string/nama"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:minHeight="48dp"
            android:id="@+id/nama_edit_create"
            android:inputType="text"
            android:padding="10dp"
            android:background="@drawable/custom_edit_text"
            android:importantForAutofill="no" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:id="@+id/create_btn"
        android:text="@string/create"
        android:textColor="@color/white"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/pink"/>
</LinearLayout>